Mavryk Protocol integration

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@airgap/beacon-sdk": "^4.0.12",
-    "@taquito/beacon-wallet": "^17.4.0",
-    "@taquito/signer": "^17.4.0",
-    "@taquito/taquito": "^17.4.0",
+    "@mavrykdynamics/beacon-sdk": "^4.0.12-301023",
+    "@mavrykdynamics/taquito-beacon-wallet": "^17.3.2",
+    "@mavrykdynamics/taquito-signer": "^17.3.2",
+    "@mavrykdynamics/taquito": "^17.3.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "html-react-parser": "^5.0.7",
