--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -41,7 +41,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ github.repository_owner }}/tezos-faucet
+          images: ghcr.io/${{ github.repository_owner }}/mavryk-faucet
           tags: |
             type=ref,event=branch
             type=ref,event=pr
