--- a/public/config.json
+++ b/public/config.json
@@ -1,17 +1,17 @@
 {
     "application": {
-      "name": "Mavryk Ghostnet Faucet",
+      "name": "Mavryk Basenet Faucet",
       "googleCaptchaSiteKey": "6LefC8QmAAAAAIXuoOhyI-FtALkYXZm4JK0GBYfb",
       "backendUrl": "http://localhost:3000",
       "githubRepo": "https://github.com/mavryk-network/mavryk-faucet",
       "disableChallenges": false,
-      "minTez": 1,
-      "maxTez": 6000
+      "minMav": 1,
+      "maxMav": 6000
     },
     "network": {
       "name": "Basenet",
       "rpcUrl": "http://localhost:8732",
       "faucetAddress": "mv1V4h45W3p4e1sjSBvRkK2uYbvkTnSuHg8g",
-      "viewer": "https://ghost.tzstats.com"
+      "viewer": "https://basenet.tzstats.com"
     }
 }
