--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@mavrykdynamics/taquito": "^19.2.2",
     "@mavrykdynamics/taquito-beacon-wallet": "^19.2.2",
     "@mavrykdynamics/taquito-signer": "^19.2.2",
-    "@mavrykdynamics/taquito": "^19.2.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "html-react-parser": "^5.0.7",
@@ -16,6 +16,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-select": "^5.8.0",
     "serve": "^14.2.1"
   },
   "devDependencies": {
