--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-google-recaptcha": "^2.1.8",
     "@vitejs/plugin-react": "^4.2.1",
     "chalk": "^4.1.2",
+    "prettier": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3",
     "vite": "^4.4.9",
