--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@dicebear/avatars": "^4.10.8",
+    "@dicebear/avatars-bottts-sprites": "^4.10.8",
     "@mavrykdynamics/taquito": "^19.2.2",
     "@mavrykdynamics/taquito-beacon-wallet": "^19.2.2",
     "@mavrykdynamics/taquito-signer": "^19.2.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "html-react-parser": "^5.0.7",
+    "jdenticon": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
