--- a/public/config.json
+++ b/public/config.json
@@ -1,21 +1,18 @@
 {
-    "application": {
-      "name": "Mavryk Basenet Faucet",
-      "googleCaptchaSiteKey": "6LefC8QmAAAAAIXuoOhyI-FtALkYXZm4JK0GBYfb",
-      "backendUrl": "https://atlasnet.faucet.mavryk.network",
-      "githubRepo": "https://github.com/mavryk-network/mavryk-faucet",
-      "disableChallenges": true,
-      "minMav": 1,
-      "maxMav": 6000,
-      "minMvn": 1,
-      "maxMvn": 1000,
-      "minUsdt": 1,
-      "maxUsdt": 1000
-    },
-    "network": {
-      "name": "Basenet",
-      "rpcUrl": "https://atlasnet.rpc.mavryk.network",
-      "faucetAddress": "mv1V4h45W3p4e1sjSBvRkK2uYbvkTnSuHg8g",
-      "viewer": "https://basenet.tzstats.com"
-    }
+  "application": {
+    "name": "Mavryk Basenet Faucet",
+    "googleCaptchaSiteKey": "6LefC8QmAAAAAIXuoOhyI-FtALkYXZm4JK0GBYfb",
+    "backendUrl": "https://atlasnet.faucet.mavryk.network",
+    "nexusBackendUrl": "https://atlasnet.api.mavryk.network/v1",
+    "githubRepo": "https://github.com/mavryk-network/mavryk-faucet",
+    "disableChallenges": true,
+    "minMav": 1,
+    "maxMav": 6000
+  },
+  "network": {
+    "name": "Basenet",
+    "rpcUrl": "https://atlasnet.rpc.mavryk.network",
+    "faucetAddress": "mv1V4h45W3p4e1sjSBvRkK2uYbvkTnSuHg8g",
+    "viewer": "https://basenet.tzstats.com"
+  }
 }
