--- a/public/config.json
+++ b/public/config.json
@@ -6,6 +6,7 @@
     "apiMavrykUrl": "https://atlasnet.api.mavryk.network/v1",
     "githubRepo": "https://github.com/mavryk-network/mavryk-faucet",
     "disableChallenges": true,
+    "maintenance": false,
     "minMav": 1,
     "maxMav": 6000
   },
